@@ -1,4 +1,6 @@
-r9 (future)
+r9 (2016-12-13)
+* pads: Simplified controller reading in lowlevel, as we want to
+  ignore controllers other than the primary one
 * copydigits: Can draw any four ASCII characters, not just digits
 * Serial watch: Read a 32-bit report from any serial line
 * Applied zlib license
